Melhora a estrutura das datas de introdução/validação

--- a/src/style/_information.scss
+++ b/src/style/_information.scss
@@ -88,4 +88,13 @@
             }
         }
     }
+
+    .introduction-date {
+        display: inline-block;
+        margin-right: 8px;
+    }
+
+    .expiration-date {
+        display: inline-block;
+    }
 }
